--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="outer-div">
         <div class="box">
+            <div class="hp"><p>HARRY POTTER</p></div>
             <span style="--i: 1">
                 <img src="images\1st.jpg" alt=""/>
             </span>
