--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+    <h1>Harry Potter</h1>
     <div class="outer-div">
         <div class="box">
             <div class="hp"><p>HARRY POTTER</p></div>
