--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <h1>Harry Potter</h1>
+    <h1 id="movieTitle">Harry Potter</h1>
     <div class="outer-div">
-        <div class="box">
+        <div class="box" id="imageContainer">
             <div class="hp"><p>HARRY POTTER</p></div>
             <span style="--i: 1">
                 <img src="images\1st.jpg" alt=""/>
@@ -41,5 +41,7 @@
             </span>
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
